Fixed issue with grid spacing for the Services swirl image.

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -59,7 +59,7 @@ body {
 
 #topTextGrid {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 0.2fr 1fr 1fr 2fr;
+  grid-template-rows: 2fr 1fr 1fr 0.2fr 1fr 1fr 2fr;
 }
 
 #provenText {
